First pass at building using material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>
-  {{title}}
-</h1>
-<router-outlet></router-outlet>
+<md-toolbar class="navbar" color="primary">
+    <span>ctking425.github.io</span>
+</md-toolbar>
+<div class="big-picture">
+  I plan to fill this out at some point...
+</div>
